# hotpot_multi_agent

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  temp.py
frontend/: package-lock.json  package.json
