[project]
name = "hotpot-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "langchain>=0.3.26",
    "langgraph>=0.4.8",
    "mlxtend>=0.23.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
]
